# SLang

./: .gitignore  CMakeLists.txt  README.md  ast.hpp  grammar  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  util.cpp  util.hpp
include/: any.hpp  lexer.hpp  parser.hpp  util.hpp
src/: lexer.cpp  main.cpp  util.cpp
test/: hello-test.slang
